Исправил недочеты с gif файлом

--- a/Balls_WindowsFormsApp/FruitNinjaWindowsFormsApp/FruitNinjaWindowsFormsApp.csproj
+++ b/Balls_WindowsFormsApp/FruitNinjaWindowsFormsApp/FruitNinjaWindowsFormsApp.csproj
@@ -97,5 +97,9 @@
       <Name>Balls_Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="screenshots\FN.gif" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
